Bug 1387913: Make sure to update the stylist if needed on EnsureUniqueInnerOnCSSSheets. r=heycam

MozReview-Commit-ID: 3eKd78qMC1T

--HG--
extra : rebase_source : b317f0e12f769d39a7cbae66d9147c52d40cffea